Section-02/k8s-objects/03-clickhouse.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clickhouse
