Section-02/k8s-objects/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickhouse-alb
  namespace: clickhouse
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: clickhouse-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: '200-399'
    alb.ingress.kubernetes.io/target-type: ip # sticky sessions
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: shard0replica0.fxcintel.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chi-clickhouse-clickhouse-0-0
                port:
                  number: 8123

    - host: shard0replica1.fxcintel.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chi-clickhouse-clickhouse-0-1
                port:
                  number: 8123

    - host: shard1replica0.fxcintel.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chi-clickhouse-clickhouse-1-0
                port:
                  number: 8123

    - host: shard1replica1.fxcintel.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chi-clickhouse-clickhouse-1-1
                port:
                  number: 8123
